Fix Missing Background Color On Some Cards

--- a/resources/less/metager/general/cards.less
+++ b/resources/less/metager/general/cards.less
@@ -17,3 +17,7 @@
         padding: 1rem;
     }
 }
+
+.result-hoster>.card {
+    background-color: @background-color;
+}
